--- a/MainActivity/AndroidManifest.xml
+++ b/MainActivity/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:debuggable="false">
         <activity
             android:name="se.kth.csc.iprog.dinnerplanner.android.MainActivity"
             android:label="@string/app_name" >
